Add mutation functionality (#222)
* add mutation functionality

* break out `data-cfw-mutate` from utils, extend more widgets

* more tweaks and linting

* equalize tweak

* more equalize tweaks

* missed a save

* fix mutation util returns

* add some doc

* update comment

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -8,6 +8,10 @@
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
+<!--[if lt IE 10]>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.24/MutationObserver.min.js" integrity="sha384-8HHYYRe45k4Xq40fi/cZaaby4FJgnOOVmnRzX3OWtwpfiUPfx7tnK2QkDPuIRGm0" crossorigin="anonymous"></script>
+<![endif]-->
+
 <script type="text/javascript" src="../../docs/assets/js/vendor/jquery.min.js"></script>
 <script type="text/javascript" src="../../js/util.js"></script>
 <script type="text/javascript" src="../../js/drag.js"></script>
@@ -659,8 +663,8 @@ $(window).ready(function() {
                         Accordion_0
                         <span class="caret"></span>
                     </a>
-                    <div id="accordion_0">
-                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div id="accordion_0" class="collapse">
+                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                     </div>
                 </div>
                 <div>
@@ -668,8 +672,13 @@ $(window).ready(function() {
                         Accordion_1
                         <span class="caret"></span>
                     </a>
-                    <div id="accordion_1">
-                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div id="accordion_1" class="collapse">
+                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="" data-cfw="lazy" data-cfw-lazy-src="../../docs/assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid" />
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -677,8 +686,8 @@ $(window).ready(function() {
                         Accordion_2
                         <span class="caret"></span>
                     </a>
-                    <div id="accordion_2">
-                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                    <div id="accordion_2" class="collapse">
+                        <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
                     </div>
                 </div>
             </div>
@@ -798,11 +807,13 @@ $(window).ready(function() {
                     $('#pop_7t').one('beforeShow.cfw.popover', function(e) {
                         var $popover = $(this);
                         console.log($popover.data('cfw.popover').$target);
+                        /*
                         $popover.data('cfw.popover').$target.find('[data-cfw="lazy"]').each(function() {
                             $(this).one('load', function() {
                                 $popover.CFW_Popover('locateTip');
                             }).CFW_Lazy('show');
                         });
+                        */
                     });
                 });
                 /*
@@ -992,18 +1003,41 @@ $(window).ready(function() {
                 <div class="tab-content">
                     <div class="tab-pane" id="tabpanel1">
                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                        <p>This <button type="button"  class="btn btn-default" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="right">button</button> should trigger a popover on click.</p>
                     </div>
                     <div class="tab-pane" id="tabpanel2">
                         <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
                     </div>
                     <div class="tab-pane" id="tabpanel3">
                         <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
+                        <div class="row" data-cfw="equalize" data-cfw-equalize-target=".card">
+                            <div class="col-4">
+                                <div class="card">
+                                    Card
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card">
+                                    Card<br />Card<br />Card<br />
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="card">
+                                    Card
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="tab-pane" id="tabpanel4">
                         <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
                     </div>
                     <div class="tab-pane" id="tabpanel5">
                         <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+                        <div class="row">
+                            <div class="col-4">
+                                <img src="" data-cfw="lazy" data-cfw-lazy-src="../../docs/assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid" />
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1614,7 +1648,7 @@ $(window).ready(function() {
             </div>
 
             <strong>By class:</strong>
-            <div class="row" data-cfw="equalize" data-cfw-equalize-target=".well" data-cfw-equalize-hidden=true>
+            <div class="row" data-cfw="equalize" data-cfw-equalize-target=".well">
                 <div class="col-md-4">
                     <div class="well">
                         <h3>Panel 1</h3>
@@ -1634,7 +1668,7 @@ $(window).ready(function() {
                         <!-- <img src="../../docs/assets/img/test.gif" alt="test pattern" class="img-fluid" /> -->
                     </div>
                 </div>
-                <div class="col-md-4 hidden">
+                <div class="col-md-4 d-none">
                     <div class="well">
                         <h3>Panel 4</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ac nisi sem. Maecenas elementum a lectus quis fermentum.</p>
@@ -1736,6 +1770,7 @@ $(window).ready(function() {
                 <h4 class="modal-title">Modal title</h4>
             </div>
             <div class="modal-body">
+                <img src="" data-cfw="lazy" data-cfw-lazy-src="../../docs/assets/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid" />
                 <h4>Text in a modal</h4>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
                 <h4>Popover in a modal</h4>
