--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -289,6 +289,7 @@ Holder.addTheme("gray", {
 <p><abbr>abbr (no title)</abbr></p>
 <p><abbr title="abbreviation">abbr</abbr></p>
 <p><abbr title="HyperText Markup Language" class="initialism">HTML</abbr></p>
+<p><abbr title="abbreviation" data-cfw="tooltip">abbr</abbr></p>
 
 <h3>Text - context</h3>
 <p>
