Rename tooltip/popover option from `activate` to `show`
Normalize with the similar option for modal

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -868,7 +868,7 @@ $(window).ready(function() {
                         $('#pop0_1').CFW_Popover({
                             target: '#popR',
                             trigger: 'click',
-                            activate: true
+                            show: true
                         });
                     });
                     $('#pop0_0').CFW_Popover('unlink');
@@ -887,7 +887,7 @@ $(window).ready(function() {
 
             <strong>Activated Popover:</strong>
             <br />
-            <button type="button" class="btn btn-warning" data-cfw="popover" data-cfw-popover-title="Automatically shown" data-cfw-popover-content="Nifty eh!" data-cfw-popover-placement="right" data-cfw-popover-activate=true>Auto show popover</button>
+            <button type="button" class="btn btn-warning" data-cfw="popover" data-cfw-popover-title="Automatically shown" data-cfw-popover-content="Nifty eh!" data-cfw-popover-placement="right" data-cfw-popover-show=true>Auto show popover</button>
 
             <hr />
 
@@ -951,7 +951,7 @@ $(window).ready(function() {
 
             <strong>Activated Tooltip:</strong>
             <br />
-            <button type="button" class="btn btn-warning" data-cfw="tooltip" data-cfw-tooltip-title="Automatically shown" data-cfw-tooltip-placement="right" data-cfw-tooltip-activate=true>Auto show tooltip</button>
+            <button type="button" class="btn btn-warning" data-cfw="tooltip" data-cfw-tooltip-title="Automatically shown" data-cfw-tooltip-placement="right" data-cfw-tooltip-show=true>Auto show tooltip</button>
 
             <hr />
 
