--- a/test/visual/forms.html
+++ b/test/visual/forms.html
@@ -278,6 +278,55 @@ Holder.addTheme("gray", {
     </div>
 </div>
 
+<hr />
+
+<h3>On Backgrounds</h3>
+
+<div class="row mb-1">
+    <div class="col">
+        <div class="p-0_5"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-gray-100"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-gray-900"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-blue-400"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-red-400"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-green-400"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-cyan-400"><input type="text" class="form-control" placeholder="something"></div>
+        <div class="p-0_5 bg-mustard-400"><input type="text" class="form-control" placeholder="something"></div>
+    </div>
+    <div class="col">
+        <div class="p-0_5"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-gray-100"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-gray-900"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-blue-400"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-red-400"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-green-400"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-cyan-400"><select type="text" class="custom-select"><option>Select</option></select></div>
+        <div class="p-0_5 bg-mustard-400"><select type="text" class="custom-select"><option>Select</option></select></div>
+    </div>
+</div>
+<div class="row mb-1">
+    <div class="col">
+        <div class="p-0_5"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-gray-100"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-gray-900"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-blue-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-red-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-green-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-cyan-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+        <div class="p-0_5 bg-mustard-400"><label class="custom-file"><input type="file" id="file" class="custom-file-input"><span class="custom-file-control"></span></label></div>
+    </div>
+    <div class="col">
+        <div class="p-0_5"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-gray-100"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-gray-900"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-blue-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-red-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-green-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-cyan-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+        <div class="p-0_5 bg-mustard-400"><div class="input-group"><span class="input-group-addon" id="color-addon0">@</span><input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="color-addon0"><span class="input-group-btn"><button class="btn" type="button">Button</button></span></div></div>
+    </div>
+</div>
+
 </div>
 
 </body>
