Input Group: When using validation colors, don't z-index button above input

--- a/test/visual/flexbox-input.html
+++ b/test/visual/flexbox-input.html
@@ -210,6 +210,77 @@ Holder.addTheme("gray", {
   </span>
 </div>
 
+<h3>Feedback</h3>
+
+<div class="input-group form-group has-success">
+  <input type="text" class="form-control" placeholder="Username">
+  <span class="input-group-btn">
+    <button class="btn btn-success" type="button">Go!</button>
+  </span>
+</div>
+
+<div class="input-group form-group has-success">
+  <input type="text" class="form-control" placeholder="Username">
+  <span class="input-group-btn">
+    <button class="btn btn-outline-secondary" type="button">Go!</button>
+  </span>
+</div>
+
+<div class="input-group form-group has-success">
+  <input type="text" class="form-control" placeholder="Username">
+  <span class="input-group-btn">
+    <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+
+<div class="input-group form-group has-success">
+  <span class="input-group-btn">
+    <button class="btn btn-outline-secondary" type="button">Go!</button>
+  </span>
+  <input type="text" class="form-control" placeholder="Username">
+</div>
+
+<div class="input-group form-group has-success">
+  <span class="input-group-btn">
+    <button class="btn" type="button">Go!</button>
+  </span>
+  <input type="text" class="form-control" placeholder="Username">
+</div>
+
+<div class="input-group form-group has-danger">
+  <input type="text" class="form-control" placeholder="Username">
+  <span class="input-group-btn">
+    <button class="btn btn-danger" type="button">Go!</button>
+  </span>
+</div>
+
+<div class="input-group form-group has-danger">
+  <input type="text" class="form-control" placeholder="Username">
+  <span class="input-group-btn">
+    <button class="btn btn-outline-secondary" type="button">Go!</button>
+  </span>
+</div>
+
+<div class="input-group form-group has-danger">
+  <input type="text" class="form-control" placeholder="Username">
+  <span class="input-group-btn">
+    <button class="btn" type="button">Go!</button>
+  </span>
+</div>
+
+<div class="input-group form-group has-danger">
+  <span class="input-group-btn">
+    <button class="btn btn-outline-secondary" type="button">Go!</button>
+  </span>
+  <input type="text" class="form-control" placeholder="Username">
+</div>
+
+<div class="input-group form-group has-danger">
+  <span class="input-group-btn">
+    <button class="btn" type="button">Go!</button>
+  </span>
+  <input type="text" class="form-control" placeholder="Username">
+</div>
 
 </div></div></div>
 
