Dropdown: improve spacebar handling for `<button>`s and `role="button"`

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1063,6 +1063,19 @@ $(window).ready(function() {
 
             <h2 id="dropdown">Dropdown:</h2>
 
+            <div class="mb-1">
+                <div class="dropdown">
+                  <a href="#" role="button" class="dropdown-toggle" data-cfw="dropdown">
+                    Dropdown
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                  </ul>
+                </div>
+            </div>
+
             <div class="btn-group mr-1 mb-1">
                 <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown">
                     Has Inputs
