--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -3557,6 +3557,21 @@ Anchor variants:<br />
       </div>
     </div>
 
+    <div class="card card-inverse text-center" style="background-color: #333; border-color: #333;">
+      <div class="card-header">
+        Inverse card
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Special title treatment</h3>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text"><a href="#" class="card-link">Go somewhere</a></p>
+        <p class="card-text"><button type="button" class="btn btn-primary">Do something</button></p>
+      </div>
+      <div class="card-footer">
+        Card footer
+      </div>
+    </div>
+
     <h3>Card - context variants</h3>
     <div class="card card-inverse card-primary text-center">
       <div class="card-body">
