Docs: add branding, overhaul layout and give homepage more info

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -696,6 +696,11 @@ $(window).ready(function() {
 
             <h2 id="popover">Popover:</h2>
 
+            <div class="mb-1">
+                <div class="card" style="width: 25%;" id="card-popover"></div>
+                <button type="button" class="btn btn-info" title="Yay, you clicked me!" data-cfw="popover" data-cfw-popover-content="blah" data-cfw-popover-container="#card-popover">Popover Custom Placement</button>
+            </div>
+
             <div class="container-viewport" id="viewport-popover">
                 <p class="viewport-text">Test viewport constraints for popovers.</p>
                 <button class="btn btn-default popover-viewport-bottom" title="This should be shifted to the right">Shift Right</button>
