Drop Normalize.css and move to updated Reboot

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -859,7 +859,7 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Form Controls</h3>
 <form>
   <fieldset class="form-group">
-    <legend><label for="exampleInputEmail1">Email address</label></legend>
+    <label for="exampleInputEmail1">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" />
     <small class="text-muted">We'll never share your email with anyone else.</small>
   </fieldset>
