Blockquote - size tweak and update cards

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -390,8 +390,13 @@ Holder.addTheme("gray", {
   <footer class="blockquote-footer">Someone famous in <cite>Source Title</cite></footer>
 </blockquote>
 
-<h3>Blockquote reverse</h3>
-<blockquote class="blockquote blockquote-reverse">
+<h3>Blockquote variants</h3>
+<blockquote class="blockquote text-center">
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+  <footer class="blockquote-footer">Someone famous in <cite>Source Title</cite></footer>
+</blockquote>
+
+<blockquote class="blockquote text-right">
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
   <footer class="blockquote-footer">Someone famous in <cite>Source Title</cite></footer>
 </blockquote>
@@ -3500,9 +3505,9 @@ Anchor variants:<br />
         Quote
       </div>
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <blockquote class="blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
@@ -3575,49 +3580,55 @@ Anchor variants:<br />
     <h3>Card - context variants</h3>
     <div class="card card-inverse card-primary text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <p>This is some text within a card body.</p>
+        <blockquote class="blockquote text-light">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer card-inverse">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-inverse card-secondary text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <p>This is some text within a card body.</p>
+        <blockquote class="blockquote text-light">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer card-inverse">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-inverse card-success text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <p>This is some text within a card body.</p>
+        <blockquote class="blockquote text-light">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer card-inverse">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-inverse card-info text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <p>This is some text within a card body.</p>
+        <blockquote class="blockquote text-light">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer card-inverse">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-inverse card-warning text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <p>This is some text within a card body.</p>
+        <blockquote class="blockquote text-light">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer card-inverse">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-inverse card-danger text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <p>This is some text within a card body.</p>
+        <blockquote class="blockquote text-light">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer card-inverse">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
@@ -3625,49 +3636,49 @@ Anchor variants:<br />
     <h3>Card - outline variants</h3>
     <div class="card card-outline-primary text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <blockquote class="blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-outline-secondary text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <blockquote class="blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-outline-success text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <blockquote class="blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-outline-info text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <blockquote class="blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-outline-warning text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <blockquote class="blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
     <div class="card card-outline-danger text-center">
       <div class="card-body">
-        <blockquote class="card-blockquote">
+        <blockquote class="blockquote">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
     </div>
@@ -3793,7 +3804,7 @@ Anchor variants:<br />
   </a>
   <div class="card">
     <div class="card-body">
-      <blockquote class="card-blockquote">
+      <blockquote class="blockquote">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
         <footer>
           <small class="text-muted">
@@ -3813,7 +3824,7 @@ Anchor variants:<br />
   </div>
   <div class="card card-inverse card-primary text-center">
     <div class="card-body">
-      <blockquote class="card-blockquote">
+      <blockquote class="blockquote">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
         <footer>
           <small>
@@ -3835,7 +3846,7 @@ Anchor variants:<br />
   </div>
   <div class="card text-right">
     <div class="card-body">
-      <blockquote class="card-blockquote">
+      <blockquote class="blockquote">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
         <footer>
           <small class="text-muted">
