Collapse: fix setting initial state for flexbox items

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1585,6 +1585,16 @@ $(window).ready(function() {
 
             <h2 id="collapse">Collapse:</h2>
             <div class="well">
+                <button type="button" class="open" data-cfw="collapse" data-cfw-collapse-target=".collFlex1">Flexbox collapse check</button>
+                <br />
+                <div class="collFlex1 row">
+                    Flex item
+                </div>
+                <div class="collFlex1">
+                    Block item
+                </div>
+            </div>
+            <div class="well">
                 <button type="button" data-cfw="collapse" data-cfw-collapse-target=".collFlex0">Flexbox collapse check</button>
                 <br />
                 <div class="collFlex0 collapse row">
@@ -1593,7 +1603,6 @@ $(window).ready(function() {
                 <div class="collFlex0 collapse">
                     Block item
                 </div>
-
             </div>
             <div class="well">
                 <label>
