Dropown: add non-interactive text item

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -1102,6 +1102,7 @@ $(window).ready(function() {
                     Dropdown
                   </a>
                   <ul class="dropdown-menu">
+                    <li class="dropdown-text">Non-interactive text</li>
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
